cmd/pint/tests/0011_ignore_rules.txt
pint.error --no-color lint rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=info msg="Loading configuration file" path=.pint.hcl
level=info msg="File parsed" path=rules/1.yaml rules=10
rules/1.yaml:5: syntax error: unexpected right parenthesis ')' (promql/syntax)
  expr: sum(errors_total) by )

rules/1.yaml:16: job label is required and should be preserved when aggregating "^.+$" rules, remove job from without() (promql/without)
  expr: sum(errors_total) without(job)

rules/1.yaml:22: syntax error: unexpected right parenthesis ')' (promql/syntax)
  expr: sum(errors_total) by )

rules/1.yaml:33: alert query doesn't have any condition, it will always fire if the metric exists (promql/comparison)
  expr: sum(errors_total) without(job)

rules/1.yaml:33: job label is required and should be preserved when aggregating "^.+$" rules, remove job from without() (promql/without)
  expr: sum(errors_total) without(job)

level=info msg="Problems found" Fatal=2 Warning=3
level=fatal msg="Fatal error" error="problems found"
-- rules/1.yaml --
- record: disabled
  expr: sum(errors_total) by ) # pint disable promql/syntax

- record: active
  expr: sum(errors_total) by )

- record: disabled
  # pint disable promql/without(job:true)
  expr: sum(errors_total) without(job)

- record: disabled
  # pint disable promql/without
  expr: sum(errors_total) without(job)

- record: active
  expr: sum(errors_total) without(job)

- alert: disabled
  expr: sum(errors_total) by ) # pint disable promql/syntax

- alert: active
  expr: sum(errors_total) by )

- alert: disabled
  # pint disable promql/without(job:true)
  expr: sum(errors_total) without(job) > 0

- alert: disabled
  # pint disable promql/without
  expr: sum(errors_total) without(job) > 0

- alert: active
  expr: sum(errors_total) without(job)

-- .pint.hcl --
rule {
    aggregate ".+" {
        keep = [ "job" ]
    }
}
